feat: add account transactions modal and improve UX
- Add AccountTransactionsModal component to display all transactions for selected account
- Make account cards clickable to open transaction details modal
- Modal shows account balance summary and chronological transaction list
- Implement clean modal design with close functionality and transaction icons
- Add transaction filtering, sorting (newest first), and empty state handling
- Prevent edit/delete button clicks from triggering modal (stopPropagation)
- Clean up unused translation keys after removing visual indicators
- Update version to 0.5.3 to reflect new feature

Enhances user experience by providing quick access to account transaction history
without navigating away from the accounts screen

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -177,8 +177,8 @@
   "importFailed": "فشل الاستيراد: {{error}}",
   "importExecutionFailed": "فشل في معالجة بيانات الاستيراد",
   "noAccountsToImport": "لم يتم العثور على حسابات صحيحة في ملف Excel",
-  "invalidAccountName": "الحساب {{index}} له اسم غير صحيح",
-  "invalidAccountCurrency": "الحساب {{index}} له عملة غير صحيحة",
+  "invalidAccountName": "حساب {{index}} له اسم غير صحيح",
+  "invalidAccountCurrency": "حساب {{index}} له عملة غير صحيحة",
   "emptyTransactionName": "المعاملة {{index}} لها اسم فارغ",
   "invalidTransactionAmount": "المعاملة {{index}} لها مبلغ غير صحيح",
   "invalidTransactionType": "المعاملة {{index}} لها نوع غير صحيح"
