feat: add password protection and biometric authentication at startup

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "حساب {{index}} له عملة غير صحيحة",
   "emptyTransactionName": "المعاملة {{index}} لها اسم فارغ",
   "invalidTransactionAmount": "المعاملة {{index}} لها مبلغ غير صحيح",
-  "invalidTransactionType": "المعاملة {{index}} لها نوع غير صحيح"
+  "invalidTransactionType": "المعاملة {{index}} لها نوع غير صحيح",
+  "security": "الأمان",
+  "password": "كلمة المرور",
+  "unlockApp": "فتح LedgerWell",
+  "enterPasswordToAccess": "أدخل كلمة المرور للوصول إلى التطبيق",
+  "unlock": "فتح القفل",
+  "or": "أو",
+  "useFaceID": "استخدم Face ID",
+  "useFingerprint": "استخدم بصمة الإصبع",
+  "incorrectPassword": "كلمة المرور غير صحيحة. حاول مرة أخرى.",
+  "biometricAuthFailed": "فشلت المصادقة البيومترية. يرجى استخدام كلمة المرور.",
+  "pleaseEnterPassword": "يرجى إدخال كلمة المرور",
+  "setupPassword": "إعداد كلمة المرور",
+  "setupPasswordDescription": "قم بتأمين تطبيقك بكلمة مرور",
+  "enterPassword": "أدخل كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "passwordHint": "يجب أن تتكون كلمة المرور من 4 أحرف على الأقل",
+  "enableBiometricAuth": "تفعيل المصادقة البيومترية",
+  "skipForNow": "تخطي الآن",
+  "passwordTooShort": "يجب أن تتكون كلمة المرور من 4 أحرف على الأقل",
+  "passwordsDoNotMatch": "كلمات المرور غير متطابقة",
+  "passwordSetSuccessfully": "تم تعيين كلمة المرور بنجاح",
+  "failedToSetPassword": "فشل تعيين كلمة المرور",
+  "changePassword": "تغيير كلمة المرور",
+  "changePasswordDescription": "تحديث كلمة المرور الحالية",
+  "currentPassword": "كلمة المرور الحالية",
+  "enterCurrentPassword": "أدخل كلمة المرور الحالية",
+  "newPassword": "كلمة المرور الجديدة",
+  "enterNewPassword": "أدخل كلمة المرور الجديدة",
+  "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+  "change": "تغيير",
+  "passwordChangedSuccessfully": "تم تغيير كلمة المرور بنجاح",
+  "failedToChangePassword": "فشل تغيير كلمة المرور",
+  "biometricAuth": "المصادقة البيومترية",
+  "biometricAuthDescription": "استخدم بصمة الإصبع أو التعرف على الوجه",
+  "biometricEnabled": "تم تفعيل المصادقة البيومترية",
+  "biometricDisabled": "تم تعطيل المصادقة البيومترية",
+  "failedToUpdateBiometric": "فشل تحديث إعداد البيومتري",
+  "removePassword": "إزالة كلمة المرور",
+  "removePasswordDescription": "تعطيل حماية كلمة المرور",
+  "removePasswordWarning": "هل أنت متأكد من إزالة حماية كلمة المرور؟ سيكون التطبيق متاحًا لأي شخص.",
+  "remove": "إزالة",
+  "passwordRemovedSuccessfully": "تمت إزالة كلمة المرور بنجاح",
+  "failedToRemovePassword": "فشل إزالة كلمة المرور",
+  "noPasswordSet": "لم يتم تعيين كلمة مرور",
+  "noPasswordSetDescription": "قم بإعداد كلمة مرور في إعدادات التطبيق"
 }
