--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Konto {{index}} hat eine ungültige Währung",
   "emptyTransactionName": "Transaktion {{index}} hat einen leeren Namen",
   "invalidTransactionAmount": "Transaktion {{index}} hat einen ungültigen Betrag",
-  "invalidTransactionType": "Transaktion {{index}} hat einen ungültigen Typ"
+  "invalidTransactionType": "Transaktion {{index}} hat einen ungültigen Typ",
+  "security": "Sicherheit",
+  "password": "Passwort",
+  "unlockApp": "LedgerWell entsperren",
+  "enterPasswordToAccess": "Geben Sie Ihr Passwort ein, um auf die App zuzugreifen",
+  "unlock": "Entsperren",
+  "or": "ODER",
+  "useFaceID": "Face ID verwenden",
+  "useFingerprint": "Fingerabdruck verwenden",
+  "incorrectPassword": "Falsches Passwort. Bitte versuchen Sie es erneut.",
+  "biometricAuthFailed": "Biometrische Authentifizierung fehlgeschlagen. Bitte verwenden Sie das Passwort.",
+  "pleaseEnterPassword": "Bitte geben Sie ein Passwort ein",
+  "setupPassword": "Passwort einrichten",
+  "setupPasswordDescription": "Sichern Sie Ihre App mit einem Passwort",
+  "enterPassword": "Passwort eingeben",
+  "confirmPassword": "Passwort bestätigen",
+  "passwordHint": "Das Passwort muss mindestens 4 Zeichen lang sein",
+  "enableBiometricAuth": "Biometrische Authentifizierung aktivieren",
+  "skipForNow": "Jetzt überspringen",
+  "passwordTooShort": "Das Passwort muss mindestens 4 Zeichen lang sein",
+  "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+  "passwordSetSuccessfully": "Passwort erfolgreich festgelegt",
+  "failedToSetPassword": "Fehler beim Festlegen des Passworts",
+  "changePassword": "Passwort ändern",
+  "changePasswordDescription": "Aktuelles Passwort aktualisieren",
+  "currentPassword": "Aktuelles Passwort",
+  "enterCurrentPassword": "Aktuelles Passwort eingeben",
+  "newPassword": "Neues Passwort",
+  "enterNewPassword": "Neues Passwort eingeben",
+  "confirmNewPassword": "Neues Passwort bestätigen",
+  "change": "Ändern",
+  "passwordChangedSuccessfully": "Passwort erfolgreich geändert",
+  "failedToChangePassword": "Fehler beim Ändern des Passworts",
+  "biometricAuth": "Biometrische Authentifizierung",
+  "biometricAuthDescription": "Fingerabdruck oder Gesichtserkennung verwenden",
+  "biometricEnabled": "Biometrische Authentifizierung aktiviert",
+  "biometricDisabled": "Biometrische Authentifizierung deaktiviert",
+  "failedToUpdateBiometric": "Fehler beim Aktualisieren der biometrischen Einstellung",
+  "removePassword": "Passwort entfernen",
+  "removePasswordDescription": "Passwortschutz deaktivieren",
+  "removePasswordWarning": "Sind Sie sicher, dass Sie den Passwortschutz entfernen möchten? Die App ist dann für jeden zugänglich.",
+  "remove": "Entfernen",
+  "passwordRemovedSuccessfully": "Passwort erfolgreich entfernt",
+  "failedToRemovePassword": "Fehler beim Entfernen des Passworts",
+  "noPasswordSet": "Kein Passwort festgelegt",
+  "noPasswordSetDescription": "Richten Sie ein Passwort in den App-Einstellungen ein"
 }
