--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Account {{index}} has invalid currency",
   "emptyTransactionName": "Transaction {{index}} has empty name",
   "invalidTransactionAmount": "Transaction {{index}} has invalid amount",
-  "invalidTransactionType": "Transaction {{index}} has invalid type"
+  "invalidTransactionType": "Transaction {{index}} has invalid type",
+  "security": "Security",
+  "password": "Password",
+  "unlockApp": "Unlock LedgerWell",
+  "enterPasswordToAccess": "Enter your password to access the app",
+  "unlock": "Unlock",
+  "or": "OR",
+  "useFaceID": "Use Face ID",
+  "useFingerprint": "Use Fingerprint",
+  "incorrectPassword": "Incorrect password. Please try again.",
+  "biometricAuthFailed": "Biometric authentication failed. Please use password.",
+  "pleaseEnterPassword": "Please enter a password",
+  "setupPassword": "Set Up Password",
+  "setupPasswordDescription": "Secure your app with a password",
+  "enterPassword": "Enter Password",
+  "confirmPassword": "Confirm Password",
+  "passwordHint": "Password must be at least 4 characters long",
+  "enableBiometricAuth": "Enable Biometric Authentication",
+  "skipForNow": "Skip for Now",
+  "passwordTooShort": "Password must be at least 4 characters long",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "passwordSetSuccessfully": "Password set successfully",
+  "failedToSetPassword": "Failed to set password",
+  "changePassword": "Change Password",
+  "changePasswordDescription": "Update your current password",
+  "currentPassword": "Current Password",
+  "enterCurrentPassword": "Enter current password",
+  "newPassword": "New Password",
+  "enterNewPassword": "Enter new password",
+  "confirmNewPassword": "Confirm new password",
+  "change": "Change",
+  "passwordChangedSuccessfully": "Password changed successfully",
+  "failedToChangePassword": "Failed to change password",
+  "biometricAuth": "Biometric Authentication",
+  "biometricAuthDescription": "Use fingerprint or face recognition",
+  "biometricEnabled": "Biometric authentication enabled",
+  "biometricDisabled": "Biometric authentication disabled",
+  "failedToUpdateBiometric": "Failed to update biometric setting",
+  "removePassword": "Remove Password",
+  "removePasswordDescription": "Disable password protection",
+  "removePasswordWarning": "Are you sure you want to remove password protection? This will make your app accessible to anyone.",
+  "remove": "Remove",
+  "passwordRemovedSuccessfully": "Password removed successfully",
+  "failedToRemovePassword": "Failed to remove password",
+  "noPasswordSet": "No Password Set",
+  "noPasswordSetDescription": "Set up a password in the app setup"
 }
