--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "La cuenta {{index}} tiene una moneda inválida",
   "emptyTransactionName": "La transacción {{index}} tiene un nombre vacío",
   "invalidTransactionAmount": "La transacción {{index}} tiene una cantidad inválida",
-  "invalidTransactionType": "La transacción {{index}} tiene un tipo inválido"
+  "invalidTransactionType": "La transacción {{index}} tiene un tipo inválido",
+  "security": "Seguridad",
+  "password": "Contraseña",
+  "unlockApp": "Desbloquear LedgerWell",
+  "enterPasswordToAccess": "Introduce tu contraseña para acceder a la aplicación",
+  "unlock": "Desbloquear",
+  "or": "O",
+  "useFaceID": "Usar Face ID",
+  "useFingerprint": "Usar huella digital",
+  "incorrectPassword": "Contraseña incorrecta. Inténtalo de nuevo.",
+  "biometricAuthFailed": "Autenticación biométrica fallida. Por favor, usa la contraseña.",
+  "pleaseEnterPassword": "Por favor, introduce una contraseña",
+  "setupPassword": "Configurar contraseña",
+  "setupPasswordDescription": "Protege tu aplicación con una contraseña",
+  "enterPassword": "Introduce la contraseña",
+  "confirmPassword": "Confirmar contraseña",
+  "passwordHint": "La contraseña debe tener al menos 4 caracteres",
+  "enableBiometricAuth": "Habilitar autenticación biométrica",
+  "skipForNow": "Omitir por ahora",
+  "passwordTooShort": "La contraseña debe tener al menos 4 caracteres",
+  "passwordsDoNotMatch": "Las contraseñas no coinciden",
+  "passwordSetSuccessfully": "Contraseña configurada correctamente",
+  "failedToSetPassword": "Error al configurar la contraseña",
+  "changePassword": "Cambiar contraseña",
+  "changePasswordDescription": "Actualizar tu contraseña actual",
+  "currentPassword": "Contraseña actual",
+  "enterCurrentPassword": "Introduce la contraseña actual",
+  "newPassword": "Nueva contraseña",
+  "enterNewPassword": "Introduce la nueva contraseña",
+  "confirmNewPassword": "Confirmar nueva contraseña",
+  "change": "Cambiar",
+  "passwordChangedSuccessfully": "Contraseña cambiada correctamente",
+  "failedToChangePassword": "Error al cambiar la contraseña",
+  "biometricAuth": "Autenticación biométrica",
+  "biometricAuthDescription": "Usar huella digital o reconocimiento facial",
+  "biometricEnabled": "Autenticación biométrica habilitada",
+  "biometricDisabled": "Autenticación biométrica deshabilitada",
+  "failedToUpdateBiometric": "Error al actualizar la configuración biométrica",
+  "removePassword": "Eliminar contraseña",
+  "removePasswordDescription": "Desactivar protección por contraseña",
+  "removePasswordWarning": "¿Estás seguro de que quieres eliminar la protección por contraseña? La aplicación será accesible para cualquiera.",
+  "remove": "Eliminar",
+  "passwordRemovedSuccessfully": "Contraseña eliminada correctamente",
+  "failedToRemovePassword": "Error al eliminar la contraseña",
+  "noPasswordSet": "No hay contraseña configurada",
+  "noPasswordSetDescription": "Configura una contraseña en la configuración de la aplicación"
 }
