--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "حساب {{index}} ارز نامعتبری دارد",
   "emptyTransactionName": "تراکنش {{index}} نام خالی دارد",
   "invalidTransactionAmount": "تراکنش {{index}} مقدار نامعتبری دارد",
-  "invalidTransactionType": "تراکنش {{index}} نوع نامعتبری دارد"
+  "invalidTransactionType": "تراکنش {{index}} نوع نامعتبری دارد",
+  "security": "امنیت",
+  "password": "رمز عبور",
+  "unlockApp": "باز کردن قفل LedgerWell",
+  "enterPasswordToAccess": "رمز عبور خود را برای دسترسی به برنامه وارد کنید",
+  "unlock": "باز کردن قفل",
+  "or": "یا",
+  "useFaceID": "استفاده از Face ID",
+  "useFingerprint": "استفاده از اثر انگشت",
+  "incorrectPassword": "رمز عبور نادرست است. لطفاً دوباره تلاش کنید.",
+  "biometricAuthFailed": "احراز هویت بیومتریک ناموفق بود. لطفاً از رمز عبور استفاده کنید.",
+  "pleaseEnterPassword": "لطفاً رمز عبور را وارد کنید",
+  "setupPassword": "تنظیم رمز عبور",
+  "setupPasswordDescription": "برنامه خود را با رمز عبور ایمن کنید",
+  "enterPassword": "رمز عبور را وارد کنید",
+  "confirmPassword": "تأیید رمز عبور",
+  "passwordHint": "رمز عبور باید حداقل 4 کاراکتر باشد",
+  "enableBiometricAuth": "فعال کردن احراز هویت بیومتریک",
+  "skipForNow": "رد کردن فعلاً",
+  "passwordTooShort": "رمز عبور باید حداقل 4 کاراکتر باشد",
+  "passwordsDoNotMatch": "رمزهای عبور مطابقت ندارند",
+  "passwordSetSuccessfully": "رمز عبور با موفقیت تنظیم شد",
+  "failedToSetPassword": "تنظیم رمز عبور ناموفق بود",
+  "changePassword": "تغییر رمز عبور",
+  "changePasswordDescription": "به‌روزرسانی رمز عبور فعلی",
+  "currentPassword": "رمز عبور فعلی",
+  "enterCurrentPassword": "رمز عبور فعلی را وارد کنید",
+  "newPassword": "رمز عبور جدید",
+  "enterNewPassword": "رمز عبور جدید را وارد کنید",
+  "confirmNewPassword": "تأیید رمز عبور جدید",
+  "change": "تغییر",
+  "passwordChangedSuccessfully": "رمز عبور با موفقیت تغییر کرد",
+  "failedToChangePassword": "تغییر رمز عبور ناموفق بود",
+  "biometricAuth": "احراز هویت بیومتریک",
+  "biometricAuthDescription": "استفاده از اثر انگشت یا تشخیص چهره",
+  "biometricEnabled": "احراز هویت بیومتریک فعال شد",
+  "biometricDisabled": "احراز هویت بیومتریک غیرفعال شد",
+  "failedToUpdateBiometric": "به‌روزرسانی تنظیمات بیومتریک ناموفق بود",
+  "removePassword": "حذف رمز عبور",
+  "removePasswordDescription": "غیرفعال کردن حفاظت رمز عبور",
+  "removePasswordWarning": "آیا مطمئن هستید که می‌خواهید حفاظت رمز عبور را حذف کنید؟ برنامه برای همه قابل دسترس خواهد بود.",
+  "remove": "حذف",
+  "passwordRemovedSuccessfully": "رمز عبور با موفقیت حذف شد",
+  "failedToRemovePassword": "حذف رمز عبور ناموفق بود",
+  "noPasswordSet": "رمز عبوری تنظیم نشده است",
+  "noPasswordSetDescription": "در تنظیمات برنامه رمز عبور تنظیم کنید"
 }
