--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Le compte {{index}} a une devise invalide",
   "emptyTransactionName": "La transaction {{index}} a un nom vide",
   "invalidTransactionAmount": "La transaction {{index}} a un montant invalide",
-  "invalidTransactionType": "La transaction {{index}} a un type invalide"
+  "invalidTransactionType": "La transaction {{index}} a un type invalide",
+  "security": "Sécurité",
+  "password": "Mot de passe",
+  "unlockApp": "Déverrouiller LedgerWell",
+  "enterPasswordToAccess": "Entrez votre mot de passe pour accéder à l'application",
+  "unlock": "Déverrouiller",
+  "or": "OU",
+  "useFaceID": "Utiliser Face ID",
+  "useFingerprint": "Utiliser l'empreinte digitale",
+  "incorrectPassword": "Mot de passe incorrect. Veuillez réessayer.",
+  "biometricAuthFailed": "L'authentification biométrique a échoué. Veuillez utiliser le mot de passe.",
+  "pleaseEnterPassword": "Veuillez entrer un mot de passe",
+  "setupPassword": "Configurer le mot de passe",
+  "setupPasswordDescription": "Sécurisez votre application avec un mot de passe",
+  "enterPassword": "Entrer le mot de passe",
+  "confirmPassword": "Confirmer le mot de passe",
+  "passwordHint": "Le mot de passe doit comporter au moins 4 caractères",
+  "enableBiometricAuth": "Activer l'authentification biométrique",
+  "skipForNow": "Ignorer pour l'instant",
+  "passwordTooShort": "Le mot de passe doit comporter au moins 4 caractères",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "passwordSetSuccessfully": "Mot de passe défini avec succès",
+  "failedToSetPassword": "Échec de la définition du mot de passe",
+  "changePassword": "Changer le mot de passe",
+  "changePasswordDescription": "Mettre à jour votre mot de passe actuel",
+  "currentPassword": "Mot de passe actuel",
+  "enterCurrentPassword": "Entrer le mot de passe actuel",
+  "newPassword": "Nouveau mot de passe",
+  "enterNewPassword": "Entrer le nouveau mot de passe",
+  "confirmNewPassword": "Confirmer le nouveau mot de passe",
+  "change": "Changer",
+  "passwordChangedSuccessfully": "Mot de passe changé avec succès",
+  "failedToChangePassword": "Échec du changement de mot de passe",
+  "biometricAuth": "Authentification biométrique",
+  "biometricAuthDescription": "Utiliser l'empreinte digitale ou la reconnaissance faciale",
+  "biometricEnabled": "Authentification biométrique activée",
+  "biometricDisabled": "Authentification biométrique désactivée",
+  "failedToUpdateBiometric": "Échec de la mise à jour des paramètres biométriques",
+  "removePassword": "Supprimer le mot de passe",
+  "removePasswordDescription": "Désactiver la protection par mot de passe",
+  "removePasswordWarning": "Êtes-vous sûr de vouloir supprimer la protection par mot de passe ? L'application sera accessible à tous.",
+  "remove": "Supprimer",
+  "passwordRemovedSuccessfully": "Mot de passe supprimé avec succès",
+  "failedToRemovePassword": "Échec de la suppression du mot de passe",
+  "noPasswordSet": "Aucun mot de passe défini",
+  "noPasswordSetDescription": "Configurez un mot de passe dans les paramètres de l'application"
 }
