--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Akun {{index}} memiliki mata uang yang tidak valid",
   "emptyTransactionName": "Transaksi {{index}} memiliki nama kosong",
   "invalidTransactionAmount": "Transaksi {{index}} memiliki jumlah yang tidak valid",
-  "invalidTransactionType": "Transaksi {{index}} memiliki tipe yang tidak valid"
+  "invalidTransactionType": "Transaksi {{index}} memiliki tipe yang tidak valid",
+  "security": "Keamanan",
+  "password": "Kata Sandi",
+  "unlockApp": "Buka Kunci LedgerWell",
+  "enterPasswordToAccess": "Masukkan kata sandi untuk mengakses aplikasi",
+  "unlock": "Buka Kunci",
+  "or": "ATAU",
+  "useFaceID": "Gunakan Face ID",
+  "useFingerprint": "Gunakan Sidik Jari",
+  "incorrectPassword": "Kata sandi salah. Silakan coba lagi.",
+  "biometricAuthFailed": "Autentikasi biometrik gagal. Silakan gunakan kata sandi.",
+  "pleaseEnterPassword": "Silakan masukkan kata sandi",
+  "setupPassword": "Atur Kata Sandi",
+  "setupPasswordDescription": "Amankan aplikasi dengan kata sandi",
+  "enterPassword": "Masukkan Kata Sandi",
+  "confirmPassword": "Konfirmasi Kata Sandi",
+  "passwordHint": "Kata sandi harus minimal 4 karakter",
+  "enableBiometricAuth": "Aktifkan Autentikasi Biometrik",
+  "skipForNow": "Lewati Untuk Sekarang",
+  "passwordTooShort": "Kata sandi harus minimal 4 karakter",
+  "passwordsDoNotMatch": "Kata sandi tidak cocok",
+  "passwordSetSuccessfully": "Kata sandi berhasil diatur",
+  "failedToSetPassword": "Gagal mengatur kata sandi",
+  "changePassword": "Ubah Kata Sandi",
+  "changePasswordDescription": "Perbarui kata sandi saat ini",
+  "currentPassword": "Kata Sandi Saat Ini",
+  "enterCurrentPassword": "Masukkan kata sandi saat ini",
+  "newPassword": "Kata Sandi Baru",
+  "enterNewPassword": "Masukkan kata sandi baru",
+  "confirmNewPassword": "Konfirmasi kata sandi baru",
+  "change": "Ubah",
+  "passwordChangedSuccessfully": "Kata sandi berhasil diubah",
+  "failedToChangePassword": "Gagal mengubah kata sandi",
+  "biometricAuth": "Autentikasi Biometrik",
+  "biometricAuthDescription": "Gunakan sidik jari atau pengenalan wajah",
+  "biometricEnabled": "Autentikasi biometrik diaktifkan",
+  "biometricDisabled": "Autentikasi biometrik dinonaktifkan",
+  "failedToUpdateBiometric": "Gagal memperbarui pengaturan biometrik",
+  "removePassword": "Hapus Kata Sandi",
+  "removePasswordDescription": "Nonaktifkan perlindungan kata sandi",
+  "removePasswordWarning": "Apakah Anda yakin ingin menghapus perlindungan kata sandi? Aplikasi akan dapat diakses oleh siapa saja.",
+  "remove": "Hapus",
+  "passwordRemovedSuccessfully": "Kata sandi berhasil dihapus",
+  "failedToRemovePassword": "Gagal menghapus kata sandi",
+  "noPasswordSet": "Tidak Ada Kata Sandi",
+  "noPasswordSetDescription": "Atur kata sandi di pengaturan aplikasi"
 }
