--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Il conto {{index}} ha una valuta non valida",
   "emptyTransactionName": "La transazione {{index}} ha un nome vuoto",
   "invalidTransactionAmount": "La transazione {{index}} ha un importo non valido",
-  "invalidTransactionType": "La transazione {{index}} ha un tipo non valido"
+  "invalidTransactionType": "La transazione {{index}} ha un tipo non valido",
+  "security": "Sicurezza",
+  "password": "Password",
+  "unlockApp": "Sblocca LedgerWell",
+  "enterPasswordToAccess": "Inserisci la password per accedere all'app",
+  "unlock": "Sblocca",
+  "or": "O",
+  "useFaceID": "Usa Face ID",
+  "useFingerprint": "Usa l'impronta digitale",
+  "incorrectPassword": "Password errata. Riprova.",
+  "biometricAuthFailed": "Autenticazione biometrica fallita. Utilizza la password.",
+  "pleaseEnterPassword": "Inserisci una password",
+  "setupPassword": "Imposta password",
+  "setupPasswordDescription": "Proteggi la tua app con una password",
+  "enterPassword": "Inserisci password",
+  "confirmPassword": "Conferma password",
+  "passwordHint": "La password deve essere lunga almeno 4 caratteri",
+  "enableBiometricAuth": "Abilita autenticazione biometrica",
+  "skipForNow": "Salta per ora",
+  "passwordTooShort": "La password deve essere lunga almeno 4 caratteri",
+  "passwordsDoNotMatch": "Le password non corrispondono",
+  "passwordSetSuccessfully": "Password impostata con successo",
+  "failedToSetPassword": "Impossibile impostare la password",
+  "changePassword": "Cambia password",
+  "changePasswordDescription": "Aggiorna la password corrente",
+  "currentPassword": "Password corrente",
+  "enterCurrentPassword": "Inserisci password corrente",
+  "newPassword": "Nuova password",
+  "enterNewPassword": "Inserisci nuova password",
+  "confirmNewPassword": "Conferma nuova password",
+  "change": "Cambia",
+  "passwordChangedSuccessfully": "Password cambiata con successo",
+  "failedToChangePassword": "Impossibile cambiare la password",
+  "biometricAuth": "Autenticazione biometrica",
+  "biometricAuthDescription": "Usa l'impronta digitale o il riconoscimento facciale",
+  "biometricEnabled": "Autenticazione biometrica abilitata",
+  "biometricDisabled": "Autenticazione biometrica disabilitata",
+  "failedToUpdateBiometric": "Impossibile aggiornare l'impostazione biometrica",
+  "removePassword": "Rimuovi password",
+  "removePasswordDescription": "Disabilita protezione password",
+  "removePasswordWarning": "Sei sicuro di voler rimuovere la protezione password? L'app sarà accessibile a chiunque.",
+  "remove": "Rimuovi",
+  "passwordRemovedSuccessfully": "Password rimossa con successo",
+  "failedToRemovePassword": "Impossibile rimuovere la password",
+  "noPasswordSet": "Nessuna password impostata",
+  "noPasswordSetDescription": "Imposta una password nelle impostazioni dell'app"
 }
