--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "アカウント{{index}}の通貨が無効です",
   "emptyTransactionName": "取引{{index}}の名前が空です",
   "invalidTransactionAmount": "取引{{index}}の金額が無効です",
-  "invalidTransactionType": "取引{{index}}のタイプが無効です"
+  "invalidTransactionType": "取引{{index}}のタイプが無効です",
+  "security": "セキュリティ",
+  "password": "パスワード",
+  "unlockApp": "LedgerWellのロックを解除",
+  "enterPasswordToAccess": "アプリにアクセスするためにパスワードを入力してください",
+  "unlock": "ロック解除",
+  "or": "または",
+  "useFaceID": "Face IDを使用",
+  "useFingerprint": "指紋を使用",
+  "incorrectPassword": "パスワードが正しくありません。もう一度お試しください。",
+  "biometricAuthFailed": "生体認証に失敗しました。パスワードを使用してください。",
+  "pleaseEnterPassword": "パスワードを入力してください",
+  "setupPassword": "パスワードを設定",
+  "setupPasswordDescription": "パスワードでアプリを保護する",
+  "enterPassword": "パスワードを入力",
+  "confirmPassword": "パスワードを確認",
+  "passwordHint": "パスワードは4文字以上である必要があります",
+  "enableBiometricAuth": "生体認証を有効にする",
+  "skipForNow": "今はスキップ",
+  "passwordTooShort": "パスワードは4文字以上である必要があります",
+  "passwordsDoNotMatch": "パスワードが一致しません",
+  "passwordSetSuccessfully": "パスワードが正常に設定されました",
+  "failedToSetPassword": "パスワードの設定に失敗しました",
+  "changePassword": "パスワードを変更",
+  "changePasswordDescription": "現在のパスワードを更新",
+  "currentPassword": "現在のパスワード",
+  "enterCurrentPassword": "現在のパスワードを入力",
+  "newPassword": "新しいパスワード",
+  "enterNewPassword": "新しいパスワードを入力",
+  "confirmNewPassword": "新しいパスワードを確認",
+  "change": "変更",
+  "passwordChangedSuccessfully": "パスワードが正常に変更されました",
+  "failedToChangePassword": "パスワードの変更に失敗しました",
+  "biometricAuth": "生体認証",
+  "biometricAuthDescription": "指紋または顔認識を使用",
+  "biometricEnabled": "生体認証が有効になりました",
+  "biometricDisabled": "生体認証が無効になりました",
+  "failedToUpdateBiometric": "生体認証設定の更新に失敗しました",
+  "removePassword": "パスワードを削除",
+  "removePasswordDescription": "パスワード保護を無効にする",
+  "removePasswordWarning": "パスワード保護を削除してもよろしいですか？アプリは誰でもアクセスできるようになります。",
+  "remove": "削除",
+  "passwordRemovedSuccessfully": "パスワードが正常に削除されました",
+  "failedToRemovePassword": "パスワードの削除に失敗しました",
+  "noPasswordSet": "パスワード未設定",
+  "noPasswordSetDescription": "アプリ設定でパスワードを設定してください"
 }
