--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "계정 {{index}}의 통화가 유효하지 않습니다",
   "emptyTransactionName": "거래 {{index}}의 이름이 비어있습니다",
   "invalidTransactionAmount": "거래 {{index}}의 금액이 유효하지 않습니다",
-  "invalidTransactionType": "거래 {{index}}의 유형이 유효하지 않습니다"
+  "invalidTransactionType": "거래 {{index}}의 유형이 유효하지 않습니다",
+  "security": "보안",
+  "password": "비밀번호",
+  "unlockApp": "LedgerWell 잠금 해제",
+  "enterPasswordToAccess": "앱에 액세스하려면 비밀번호를 입력하세요",
+  "unlock": "잠금 해제",
+  "or": "또는",
+  "useFaceID": "Face ID 사용",
+  "useFingerprint": "지문 사용",
+  "incorrectPassword": "잘못된 비밀번호입니다. 다시 시도하세요.",
+  "biometricAuthFailed": "생체 인증에 실패했습니다. 비밀번호를 사용하세요.",
+  "pleaseEnterPassword": "비밀번호를 입력하세요",
+  "setupPassword": "비밀번호 설정",
+  "setupPasswordDescription": "비밀번호로 앱을 보호하세요",
+  "enterPassword": "비밀번호 입력",
+  "confirmPassword": "비밀번호 확인",
+  "passwordHint": "비밀번호는 최소 4자 이상이어야 합니다",
+  "enableBiometricAuth": "생체 인증 활성화",
+  "skipForNow": "지금은 건너뛰기",
+  "passwordTooShort": "비밀번호는 최소 4자 이상이어야 합니다",
+  "passwordsDoNotMatch": "비밀번호가 일치하지 않습니다",
+  "passwordSetSuccessfully": "비밀번호가 성공적으로 설정되었습니다",
+  "failedToSetPassword": "비밀번호 설정에 실패했습니다",
+  "changePassword": "비밀번호 변경",
+  "changePasswordDescription": "현재 비밀번호 업데이트",
+  "currentPassword": "현재 비밀번호",
+  "enterCurrentPassword": "현재 비밀번호 입력",
+  "newPassword": "새 비밀번호",
+  "enterNewPassword": "새 비밀번호 입력",
+  "confirmNewPassword": "새 비밀번호 확인",
+  "change": "변경",
+  "passwordChangedSuccessfully": "비밀번호가 성공적으로 변경되었습니다",
+  "failedToChangePassword": "비밀번호 변경에 실패했습니다",
+  "biometricAuth": "생체 인증",
+  "biometricAuthDescription": "지문 또는 얼굴 인식 사용",
+  "biometricEnabled": "생체 인증이 활성화되었습니다",
+  "biometricDisabled": "생체 인증이 비활성화되었습니다",
+  "failedToUpdateBiometric": "생체 인증 설정 업데이트에 실패했습니다",
+  "removePassword": "비밀번호 제거",
+  "removePasswordDescription": "비밀번호 보호 비활성화",
+  "removePasswordWarning": "비밀번호 보호를 제거하시겠습니까? 앱은 누구나 액세스할 수 있게 됩니다.",
+  "remove": "제거",
+  "passwordRemovedSuccessfully": "비밀번호가 성공적으로 제거되었습니다",
+  "failedToRemovePassword": "비밀번호 제거에 실패했습니다",
+  "noPasswordSet": "비밀번호 설정 안 됨",
+  "noPasswordSetDescription": "앱 설정에서 비밀번호를 설정하세요"
 }
