--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "A conta {{index}} tem moeda inválida",
   "emptyTransactionName": "A transação {{index}} tem nome vazio",
   "invalidTransactionAmount": "A transação {{index}} tem quantia inválida",
-  "invalidTransactionType": "A transação {{index}} tem tipo inválido"
+  "invalidTransactionType": "A transação {{index}} tem tipo inválido",
+  "security": "Segurança",
+  "password": "Senha",
+  "unlockApp": "Desbloquear LedgerWell",
+  "enterPasswordToAccess": "Digite sua senha para acessar o aplicativo",
+  "unlock": "Desbloquear",
+  "or": "OU",
+  "useFaceID": "Usar Face ID",
+  "useFingerprint": "Usar impressão digital",
+  "incorrectPassword": "Senha incorreta. Tente novamente.",
+  "biometricAuthFailed": "Autenticação biométrica falhou. Use a senha.",
+  "pleaseEnterPassword": "Por favor, digite uma senha",
+  "setupPassword": "Configurar senha",
+  "setupPasswordDescription": "Proteja seu aplicativo com uma senha",
+  "enterPassword": "Digite a senha",
+  "confirmPassword": "Confirmar senha",
+  "passwordHint": "A senha deve ter pelo menos 4 caracteres",
+  "enableBiometricAuth": "Ativar autenticação biométrica",
+  "skipForNow": "Pular por enquanto",
+  "passwordTooShort": "A senha deve ter pelo menos 4 caracteres",
+  "passwordsDoNotMatch": "As senhas não correspondem",
+  "passwordSetSuccessfully": "Senha configurada com sucesso",
+  "failedToSetPassword": "Falha ao configurar senha",
+  "changePassword": "Alterar senha",
+  "changePasswordDescription": "Atualize sua senha atual",
+  "currentPassword": "Senha atual",
+  "enterCurrentPassword": "Digite a senha atual",
+  "newPassword": "Nova senha",
+  "enterNewPassword": "Digite a nova senha",
+  "confirmNewPassword": "Confirmar nova senha",
+  "change": "Alterar",
+  "passwordChangedSuccessfully": "Senha alterada com sucesso",
+  "failedToChangePassword": "Falha ao alterar senha",
+  "biometricAuth": "Autenticação biométrica",
+  "biometricAuthDescription": "Use impressão digital ou reconhecimento facial",
+  "biometricEnabled": "Autenticação biométrica ativada",
+  "biometricDisabled": "Autenticação biométrica desativada",
+  "failedToUpdateBiometric": "Falha ao atualizar configuração biométrica",
+  "removePassword": "Remover senha",
+  "removePasswordDescription": "Desativar proteção por senha",
+  "removePasswordWarning": "Tem certeza de que deseja remover a proteção por senha? O aplicativo ficará acessível a qualquer pessoa.",
+  "remove": "Remover",
+  "passwordRemovedSuccessfully": "Senha removida com sucesso",
+  "failedToRemovePassword": "Falha ao remover senha",
+  "noPasswordSet": "Nenhuma senha configurada",
+  "noPasswordSetDescription": "Configure uma senha nas configurações do aplicativo"
 }
