--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -58,7 +58,7 @@
   "resetConfirm": "Это навсегда удалит все счета, транзакции и настройки. Это действие нельзя отменить.",
   "allDataReset": "Все данные были сброшены",
   "resetFailed": "Не удалось сбросить данные",
-  "success": "Успех",
+  "success": "Успешно",
   "enterAccountName": "Введите название счета",
   "optionalDescription": "Дополнительное описание",
   "createCustomCurrency": "Создайте пользовательскую валюту, указав код, название, символ и курс обмена к USD.",
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "Счёт {{index}} имеет недопустимую валюту",
   "emptyTransactionName": "Транзакция {{index}} имеет пустое имя",
   "invalidTransactionAmount": "Транзакция {{index}} имеет недопустимую сумму",
-  "invalidTransactionType": "Транзакция {{index}} имеет недопустимый тип"
+  "invalidTransactionType": "Транзакция {{index}} имеет недопустимый тип",
+  "security": "Безопасность",
+  "password": "Пароль",
+  "unlockApp": "Разблокировать LedgerWell",
+  "enterPasswordToAccess": "Введите пароль для доступа к приложению",
+  "unlock": "Разблокировать",
+  "or": "ИЛИ",
+  "useFaceID": "Использовать Face ID",
+  "useFingerprint": "Использовать отпечаток пальца",
+  "incorrectPassword": "Неверный пароль. Попробуйте еще раз.",
+  "biometricAuthFailed": "Биометрическая аутентификация не удалась. Используйте пароль.",
+  "pleaseEnterPassword": "Пожалуйста, введите пароль",
+  "setupPassword": "Настроить пароль",
+  "setupPasswordDescription": "Защитите приложение паролем",
+  "enterPassword": "Введите пароль",
+  "confirmPassword": "Подтвердите пароль",
+  "passwordHint": "Пароль должен содержать не менее 4 символов",
+  "enableBiometricAuth": "Включить биометрическую аутентификацию",
+  "skipForNow": "Пропустить",
+  "passwordTooShort": "Пароль должен содержать не менее 4 символов",
+  "passwordsDoNotMatch": "Пароли не совпадают",
+  "passwordSetSuccessfully": "Пароль успешно установлен",
+  "failedToSetPassword": "Не удалось установить пароль",
+  "changePassword": "Изменить пароль",
+  "changePasswordDescription": "Обновите текущий пароль",
+  "currentPassword": "Текущий пароль",
+  "enterCurrentPassword": "Введите текущий пароль",
+  "newPassword": "Новый пароль",
+  "enterNewPassword": "Введите новый пароль",
+  "confirmNewPassword": "Подтвердите новый пароль",
+  "change": "Изменить",
+  "passwordChangedSuccessfully": "Пароль успешно изменен",
+  "failedToChangePassword": "Не удалось изменить пароль",
+  "biometricAuth": "Биометрическая аутентификация",
+  "biometricAuthDescription": "Использование отпечатка пальца или распознавания лица",
+  "biometricEnabled": "Биометрическая аутентификация включена",
+  "biometricDisabled": "Биометрическая аутентификация отключена",
+  "failedToUpdateBiometric": "Не удалось обновить настройки биометрии",
+  "removePassword": "Удалить пароль",
+  "removePasswordDescription": "Отключить защиту паролем",
+  "removePasswordWarning": "Вы уверены, что хотите удалить защиту паролем? Приложение станет доступным для всех.",
+  "remove": "Удалить",
+  "passwordRemovedSuccessfully": "Пароль успешно удален",
+  "failedToRemovePassword": "Не удалось удалить пароль",
+  "noPasswordSet": "Пароль не установлен",
+  "noPasswordSetDescription": "Установите пароль в настройках приложения"
 }
