--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -181,5 +181,50 @@
   "invalidAccountCurrency": "账户{{index}}的货币无效",
   "emptyTransactionName": "交易{{index}}的名称为空",
   "invalidTransactionAmount": "交易{{index}}的金额无效",
-  "invalidTransactionType": "交易{{index}}的类型无效"
+  "invalidTransactionType": "交易{{index}}的类型无效",
+  "security": "安全",
+  "password": "密码",
+  "unlockApp": "解锁 LedgerWell",
+  "enterPasswordToAccess": "输入密码以访问应用",
+  "unlock": "解锁",
+  "or": "或",
+  "useFaceID": "使用 Face ID",
+  "useFingerprint": "使用指纹",
+  "incorrectPassword": "密码不正确。请重试。",
+  "biometricAuthFailed": "生物识别认证失败。请使用密码。",
+  "pleaseEnterPassword": "请输入密码",
+  "setupPassword": "设置密码",
+  "setupPasswordDescription": "使用密码保护您的应用",
+  "enterPassword": "输入密码",
+  "confirmPassword": "确认密码",
+  "passwordHint": "密码必须至少包含 4 个字符",
+  "enableBiometricAuth": "启用生物识别认证",
+  "skipForNow": "暂时跳过",
+  "passwordTooShort": "密码必须至少包含 4 个字符",
+  "passwordsDoNotMatch": "密码不匹配",
+  "passwordSetSuccessfully": "密码设置成功",
+  "failedToSetPassword": "设置密码失败",
+  "changePassword": "更改密码",
+  "changePasswordDescription": "更新您的当前密码",
+  "currentPassword": "当前密码",
+  "enterCurrentPassword": "输入当前密码",
+  "newPassword": "新密码",
+  "enterNewPassword": "输入新密码",
+  "confirmNewPassword": "确认新密码",
+  "change": "更改",
+  "passwordChangedSuccessfully": "密码更改成功",
+  "failedToChangePassword": "更改密码失败",
+  "biometricAuth": "生物识别认证",
+  "biometricAuthDescription": "使用指纹或面部识别",
+  "biometricEnabled": "生物识别认证已启用",
+  "biometricDisabled": "生物识别认证已禁用",
+  "failedToUpdateBiometric": "更新生物识别设置失败",
+  "removePassword": "删除密码",
+  "removePasswordDescription": "禁用密码保护",
+  "removePasswordWarning": "确定要删除密码保护吗？任何人都可以访问该应用。",
+  "remove": "删除",
+  "passwordRemovedSuccessfully": "密码删除成功",
+  "failedToRemovePassword": "删除密码失败",
+  "noPasswordSet": "未设置密码",
+  "noPasswordSetDescription": "在应用设置中设置密码"
 }
